Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/failover/FailOver01.out
FailOver01.java:10:22: compiler.err.expected: ';'
FailOver01.java:10:16: compiler.err.cant.resolve.location: kindname.variable, x, , , (compiler.misc.location: kindname.class, Test, null)
2 errors
